[tool.poetry]
name = "test-repo"
version = "0.1.0"
description = ""
authors = ["Dan Nelson <danelson@nwi.net>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.10"
icecream = "^2.1.3"

[tool.poetry.dev-dependencies]
requests = "^2.28.1"
bs4 = "^0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
